--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,6 +3,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.6.5",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "package.json": "^2.0.1"
   }
 }
