--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.6.7",
+    "node": "^19.0.0",
     "nodemon": "^2.0.20"
   }
 }
