--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,15 +13,18 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.23.6",
     "axios": "^1.1.3",
+    "bootstrap": "^5.2.2",
     "country-dropdown-with-flags-for-react": "^1.1.4",
+    "framer-motion": "^7.6.7",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.5.0",
+    "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-loading-screen": "^0.0.17",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
+    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
