--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,6 +5,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.7",
     "nodemon": "^2.0.20"
   }
