Rate Instructor Layout

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.10.15",
+    "@mui/styled-engine-sc": "^5.10.14",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -7,6 +11,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.7",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "styled-components": "^5.3.6"
   }
 }
