--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,6 +11,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.7",
+    "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
     "styled-components": "^5.3.6"
   }
