--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "country-dropdown-with-flags-for-react": "^1.1.4",
     "framer-motion": "^7.6.7",
     "react": "^18.2.0",
+    "react-auth-code-input": "^3.2.1",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
@@ -28,6 +29,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
     "styled-components": "^5.3.6",
+    "sweetalert2": "^11.6.14",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4"
   },
