Trainee can download his notes as a pdf file

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^5.2.3",
     "country-dropdown-with-flags-for-react": "^1.1.4",
     "framer-motion": "^7.6.7",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-auth-code-input": "^3.2.1",
     "react-bootstrap": "^2.6.0",
