--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
+    "react-youtube": "^10.1.0",
     "styled-components": "^5.3.6",
     "sweetalert2": "^11.6.14",
     "universal-cookie": "^4.0.4",
