--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-loading-screen": "^0.0.17",
+    "react-pdf": "^6.2.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
